<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/posterBg"
                        android:layout_width="match_parent"
                        android:layout_height="275dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sample_poster"
                        android:contentDescription="@string/image_logo" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/fg_card_detail"
                        android:contentDescription="@string/image_logo" />

                    <TextView
                        android:id="@+id/tvScoreDetail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:background="@drawable/background_circle_score"
                        android:fontFamily="@font/quicksand_bold"
                        android:gravity="center"
                        android:text="@string/sample_score"
                        android:textColor="@color/white" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/roundedPosterDetail"
                android:layout_width="135dp"
                android:layout_height="220dp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:elevation="4dp"
                android:src="@drawable/sample_poster"
                app:layout_constraintBottom_toBottomOf="@+id/cardViewTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewTop"
                app:riv_corner_radius="12dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:backgroundTint="@color/backgroundScore"
                android:elevation="4dp"
                android:src="@drawable/favorite_border"
                android:tint="@color/background"
                app:borderWidth="0dp"
                app:layout_constraintBottom_toBottomOf="@id/cardViewTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewTop"
                app:rippleColor="@color/primary"
                android:contentDescription="@string/favorite" />

            <TextView
                android:id="@+id/tvTitleDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/sample_title"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_header"
                app:layout_constraintEnd_toStartOf="@id/fabFavorite"
                app:layout_constraintStart_toEndOf="@id/roundedPosterDetail"
                app:layout_constraintTop_toBottomOf="@id/cardViewTop" />

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/margin_8dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/sample_release"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_xnormal"
                app:layout_constraintStart_toEndOf="@id/roundedPosterDetail"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDetail" />

            <TextView
                android:id="@+id/textView_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/other"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_xxnormal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/roundedPosterDetail" />

            <View
                android:id="@+id/barrier_other"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:background="@color/primary"
                app:layout_constraintEnd_toEndOf="@id/textView_other"
                app:layout_constraintStart_toStartOf="@id/textView_other"
                app:layout_constraintTop_toBottomOf="@id/textView_other" />

            <LinearLayout
                android:id="@+id/linear_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/barrier_other">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand"
                        android:text="@string/language"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/text_size_xnormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="@string/symbol_colon"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/text_size_xnormal" />

                    <TextView
                        android:id="@+id/tvLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand"
                        android:text="@string/en"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/text_size_xnormal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand"
                        android:text="@string/popularity"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/text_size_xnormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="@string/symbol_colon"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/text_size_xnormal" />

                    <TextView
                        android:id="@+id/tvPopularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand"
                        android:text="@string/_198_239"
                        android:textColor="@color/textColorWhite"
                        android:textSize="@dimen/text_size_xnormal" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/description"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_xxnormal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_other" />

            <View
                android:id="@+id/barrier_desc"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:background="@color/primary"
                app:layout_constraintEnd_toEndOf="@id/textView_description"
                app:layout_constraintStart_toStartOf="@id/textView_description"
                app:layout_constraintTop_toBottomOf="@id/textView_description" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/sample_lorem"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_xnormal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>