<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".search.SearchFragment">

    <include
        android:id="@+id/appBar"
        layout="@layout/appbar_primary" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/bg_searchview"
        android:iconifiedByDefault="true"
        android:padding="4dp"
        app:defaultQueryHint="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:queryBackground="@android:color/transparent"
        app:queryHint="Search..." />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovie"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svMovie"
        tools:listitem="@layout/item_list" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svMovie"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/dimen_160dp"
            android:layout_height="@dimen/dimen_160dp"
            android:contentDescription="@string/desc_search_image"
            android:src="@drawable/search" />

        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/search_movie"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noDataLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgEmpty"
            android:layout_width="@dimen/dimen_160dp"
            android:layout_height="@dimen/dimen_160dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_empty"
            android:src="@drawable/empty_file" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/not_found_movie"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>